# Oxidy

./: Cargo.toml  README.md  config.rhai  response.txt  tokens.txt
src/: app.rs  buffer.rs  command.rs  editor.rs  highlighter.rs  input.rs  keymap.rs  log_manager.rs  logger.rs  lsp.rs  main.rs  main_edit.rs  plugin_manager.rs  types.rs
src/lsp/: LspClient.rs  LspMessage.rs  LspResponse.rs  mod.rs
src/plugins/: config.rs  lsp.rs  mod.rs  options.rs  plugin_manager.rs  statusbar.rs  theme.rs
src/renderer/: crossterm.rs  mod.rs  wgpu_renderer.rs
src/renderer/wgpu/: mod.rs  renderer.rs  utils.rs
src/renderer/wgpu/layer/: background.rs  cursor.rs  gutter.rs  mod.rs  text.rs  ui.rs
src/renderer/wgpu/shaders/: cursor.wgsl
src/services/: lsp_service.rs  mod.rs
src/ui/: card.rs  command.rs  mod.rs  status_bar.rs  ui_element.rs  ui_manager.rs
