[package]
name = "oxidy"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
notify = "8.2.0"
regex = "1.12.2"
rhai = { version = "1.23.4", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

# GUI stuff
wgpu = "26.0.1"
wgpu_glyph = "0.26.0"
env_logger = "0.10"
winit = "0.29"
futures = "0.3"
